--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             websocket.send(formatMessage("playerInformation"));
     }
     function checkServer(){
-        ws = new WebSocket("ws://localhost:8080");
+        ws = new WebSocket("ws://memory-phd.gl.at.ply.gg:19314");
         ws.onopen = (event) => {
             console.log("Server online");
             window.location.reload();
